# TukiMedic

./: .gitignore  .pre-commit-config.yaml  ROADMAP.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3dba84be1375_initial_schema_users_cases_messages.py  823a2873289a_merge_subscription_tier_and_pgvector_.py  a1b2c3d4e5f6_add_clinical_facts.py  b2c3d4e5f6g7_add_documents_lab_values.py  c3d4e5f6g7h8_add_patient_timeline_profile.py  d4e5f6g7h8i9_add_audit_log_is_admin.py  e5f6g7h8i9j0_add_pgvector_indexes.py  f6g7h8i9j0k1_add_role_subscription_tier.py  g7h8i9j0k1l2_add_provider_credentials.py  (+3 more)
backend/app/: main.py
backend/data/: red_flags.yaml  specialty_map.yaml
backend/scripts/: smoke_audit_chain.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_credentials.py  test_admin_users.py  test_agent_model_tier.py  test_anamnesis.py  test_audit.py  test_audit_verify_chain.py  test_classifier.py  test_devils_advocate.py  test_dispatcher.py  test_graph_cache.py  test_graph_disclaimer.py  test_guardrail.py  test_kb.py  test_kb_ingest.py  test_live_llm.py  test_llm_error_handling.py  test_llm_safe_retry.py  test_medical_board.py  test_migrations.py  test_orchestrator.py  test_pdf_export.py  test_pg_facts.py  test_pg_timeline.py  test_rate_limit.py  test_redis_memory.py  test_security_hardening.py  test_specialist_agents.py  test_specialist_cardiology.py  test_specialist_dermatology.py  test_specialist_endocrinology.py  test_specialist_neurology.py  test_specialist_registry.py  test_specialist_registry_normalize.py  test_specialist_tier_gating.py  test_specialist_traumatology.py  test_specialists.py  test_storage.py  test_subscription_tier_gating.py  (+4 more)
(+317 files in other folders)
